Chess ad fix
I messed up jacobs upload, but Im pretty sure all is fixed now

--- a/src/chess/chess.css
+++ b/src/chess/chess.css
@@ -1,7 +1,6 @@
 body {
     margin-top: 60px !important;
     background-color: #7da674;
-    display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
